# merlin

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile.pybind  README.md  merlin.doxyfile
benchmarks/uai/: cpcs179.uai  cpcs360.uai  cpcs54.uai  hailfinder.uai  mildew.uai  munin.uai  win95pts.uai  xandes.uai  xdiabetes.uai  zbarley.uai  zpigs.uai  zwater.uai
examples/: paskin.uai  zeros.uai
include/: algorithm.h  ao_search.h  aobb.h  aobf.h  aobf_search_node.h  aobf_search_space.h  base.h  bound_propagator.h  braobb.h  cte.h  gls.h  graph.h  graphical_model.h  hash_zobrist.h  indexed_heap.h  merlin.h  observation.h  program_options.h  rbfaoo.h  rbfaoo_cache_table.h  rbfaoo_search_node.h  sls.h  util.h  variable_set.h  wmb.h
python/: CMakeLists.txt
src/: aobb.cpp  aobf.cpp  bound_propagator.cpp  braobb.cpp  cte.cpp  gls.cpp  hash_zobrist.cpp  main.cpp  merlin.cpp  merlin_pybind.cpp  program_options.cpp  rbfaoo.cpp  rbfaoo_cache_table.cpp  sls.cpp  wmb.cpp
tests/: CMakeLists.txt
tests/integration/: test_inference_goldens.cpp
tests/unit/: test_enum.cpp  test_factor.cpp  test_graph.cpp  test_graphical_model.cpp  test_index.cpp  test_indexed_heap.cpp  test_my_vector_set.cpp  test_observation.cpp  test_variable.cpp  test_variable_set.cpp
